# otcy

./: .pre-commit-config.yaml  pyproject.toml  readme.md
otcy/: manage.py
otcy/blcontact/: apps.py  forms.py  models.py
otcy/blkeeping/: admin.py  apps.py  models.py
otcy/blkeeping/migrations/: 0001_initial.py
otcy/blog/: models.py
otcy/blog/migrations/: 0001_initial.py
otcy/blpolls/: apps.py  views.py
otcy/config/: settings.py  urls.py  wsgi.py
otcy/otcy/: settings.py  urls.py  wsgi.py
