[tool.poetry]
name = "otcy"
version = "0.1.0"
description = ""
authors = ["Michael Kiberu <m.kiberu@kipya.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.6.0"
pylint = "^2.5.3"
autopep8 = "^1.5.4"
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
